[package]
name = "conpty-sample-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
]

[dependencies]
libc = "0.2.152"
